# Hackathon-AMD

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  config.py  deps.py  main.py
backend/app/routers/: kicad.py
backend/app/schemas/: __init__.py  kicad_payload.py  tools.py
backend/app/services/: agent.py  kicad_analyze.py  rag.py  safety.py  spice.py
backend/training/: prepare_data.py  train_yolo.py
cpp/: CMakeLists.txt  README.md
cpp/include/: instrument_bridge.hpp
cpp/src/: instrument_bridge.cpp
data/finetune/: sample.train.jsonl
data/rag/: led_bjt_driver.md  opamp_saturation.md
docs/: AMD_GPU.md
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/probepilot/: ChatPanel.tsx  CircuitInspector.tsx  CircuitUploadPanel.tsx  ConfidencePanel.tsx  ExpectedVsMeasuredChart.tsx  JsonToolViewer.tsx  MeasurementFeed.tsx  ToolTimeline.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/src/hooks/: useDiagnosticsSocket.ts  useVoiceLab.ts
frontend/src/lib/: utils.ts
kicad-plugin/: README.md  probepilot_pcbnew.py
kubernetes/: api-deployment.yaml  configmap.yaml  namespace.yaml
